# fc

./: Cargo.toml  README.md
benches/: compress_bench.rs
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/codec/: huffman_codec.rs  mod.rs  trait.rs
src/core/: bit_buffer.rs  error.rs  frequency.rs  huffman.rs  mod.rs
src/format/: crc32.rs  header.rs  mod.rs
test_data/: sample.txt
tests/: cli.rs  gzip_compat.rs  property.proptest-regressions  property.rs  roundtrip.rs  scaffold_test.rs
